fix(ui): Remove scrollbar from execution result summary

--- a/crates/webui/styles.css
+++ b/crates/webui/styles.css
@@ -133,11 +133,7 @@ ul li span {
     color: #50fa7b;
 }
 
-span.bp3-tree-node-label {
-    overflow: auto;
-}
-
 .table-wrapper {
     width: 100%;
     overflow-x: auto;
-  }
+}
